// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection variable components Serialization Saving: Collection with collection variable component ( no grandchildren ) 1`] = `
{
  "collectionDef": {
    "collectionConfig": {
      "collectionId": "my_collection",
      "dataSource": {
        "path": "my_data_source_id",
        "type": "data-variable",
      },
      "endIndex": 2,
      "startIndex": 0,
    },
    "componentDef": {
      "components": [
        {
          "type": "default",
        },
        {
          "collectionId": "my_collection",
          "path": "user",
          "type": "data-collection-variable",
          "variableType": "currentItem",
        },
      ],
      "type": "default",
    },
  },
  "type": "data-collection",
}
`;

exports[`Collection variable components Serialization Saving: Collection with collection variable component ( with grandchildren ) 1`] = `
{
  "collectionDef": {
    "collectionConfig": {
      "collectionId": "my_collection",
      "dataSource": {
        "path": "my_data_source_id",
        "type": "data-variable",
      },
      "endIndex": 2,
      "startIndex": 0,
    },
    "componentDef": {
      "components": [
        {
          "components": [
            {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-collection-variable",
              "variableType": "currentIndex",
            },
          ],
          "type": "default",
        },
        {
          "collectionId": "my_collection",
          "path": "user",
          "type": "data-collection-variable",
          "variableType": "currentItem",
        },
      ],
      "type": "default",
    },
  },
  "type": "data-collection",
}
`;

exports[`Collection variable components Serialization Serializion to JSON: Collection with collection variable component ( no grandchildren ) 1`] = `
{
  "collectionDef": {
    "collectionConfig": {
      "collectionId": "my_collection",
      "dataSource": {
        "path": "my_data_source_id",
        "type": "data-variable",
      },
      "endIndex": 2,
      "startIndex": 0,
    },
    "componentDef": {
      "components": [
        {
          "type": "default",
        },
        {
          "collectionId": "my_collection",
          "path": "user",
          "type": "data-collection-variable",
          "variableType": "currentItem",
        },
      ],
      "type": "default",
    },
  },
  "type": "data-collection",
}
`;

exports[`Collection variable components Serialization Serializion to JSON: Collection with collection variable component ( with grandchildren ) 1`] = `
{
  "collectionDef": {
    "collectionConfig": {
      "collectionId": "my_collection",
      "dataSource": {
        "path": "my_data_source_id",
        "type": "data-variable",
      },
      "endIndex": 2,
      "startIndex": 0,
    },
    "componentDef": {
      "components": [
        {
          "components": [
            {
              "collectionId": "my_collection",
              "path": "user",
              "type": "data-collection-variable",
              "variableType": "currentIndex",
            },
          ],
          "type": "default",
        },
        {
          "collectionId": "my_collection",
          "path": "user",
          "type": "data-collection-variable",
          "variableType": "currentItem",
        },
      ],
      "type": "default",
    },
  },
  "type": "data-collection",
}
`;
